# wayback-pdf-diff

./: README.md  pyproject.toml  readme.md  setup.py  test_fetch.py  test_timeout.py
tests/: conftest.py  test_pdf_diffs.py
wayback_pdf_diff/: __init__.py  __main__.py  exceptions.py  extract.py  pdf_diffs.py  routes.py
wayback_pdf_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wayback_pdf_diff/server/: __init__.py  server.py
wayback_pdf_diff/server/static/: viewer.html
